# Nintendo

./: CMakeLists.txt
src/: bruteForce.cpp  encode.cpp  encode.h  main.cpp  my-encoder.cpp  solution.cpp
